syntax = "proto3";

option java_package = "com.fairphone.spring.launcher.data.model";
option java_multiple_files = true;

message LauncherProfile {

    string name = 1;
    string icon = 2;
    int64 bgColor1 = 3;
    int64 bgColor2 = 4;
    repeated string visibleApps = 5;
    ContactType allowedContact = 6;
    repeated string customContacts = 7;
    bool repeatCallEnabled = 8;
    repeated string appNotifications = 9;
    int32 wallpaperId = 10;
    UiMode uiMode = 11;
    bool blueLightFilterEnabled = 12;
    SoundSetting soundSetting = 13;
    bool batterySaverEnabled = 14;
    bool reduceBrightnessEnabled = 15;
    bool ecoChargeEnabled = 16;
    bool alwaysOnDisplayEnabled = 17;
    bool airplaneModeEnabled = 18;
}

enum ContactType {
    CONTACT_TYPE_EVERYONE = 0;
    CONTACT_TYPE_NONE = 1;
    CONTACT_TYPE_ALL_CONTACTS = 2;
    CONTACT_TYPE_STARRED = 3;
    CONTACT_TYPE_CUSTOM = 4;
}

enum UiMode {
    UI_MODE_LIGHT = 0;
    UI_MODE_DARK = 1;
    UI_MODE_SYSTEM = 2;
}

enum SoundSetting {
    SOUND_SETTING_LOUD = 0;
    SOUND_SETTING_VIBRATE = 1;
    SOUND_SETTING_SILENT = 2;
    SOUND_SETTING_FOLLOW_DEVICE_SETTINGS = 3;
}